--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,11 +1,31 @@
-@charset "UTF-8"
+@charset "UTF-8";
 
-body {
+body{
+    background-color: #dddddd;
+    color: rgba(0, 0,0,1);
+}
+
+div#interface {
+    width: 900px;
     background-color: white;
+    margin: -20px auto 0px auto;
+    box-shadow: 0px 0px 10px rgba(0, 0,0,.5);
+    padding: 10px 10px 10px 10px;
+
 }
 p{
 text-align: justify; 
 text-indent: 50px;
+}
+
+header#cabecalho img#icone {
+    position: absolute;
+    left: 780px; 
+    top: 40px;
+}
+
+header#cabecalho {
+    
 }
 /* Formatação de imagens com legendas */
 
@@ -29,7 +49,39 @@ figure.foto-legenda figcaption {
     height: 100%;
     padding: 10px;
     box-sizing: border-box;
+    transition: opacity 1s;
 }
 figure.foto-legenda:hover figcaption {
     opacity: 1;
+}
+
+/* Formatação do menu */
+nav#menu {display: block;}
+
+nav#menu ul{ list-style: none;
+    text-transform: uppercase;
+    position: absolute;
+    top: -20px;
+    left: 400px;
+}
+nav#menu li{display: inline-block;
+background-color: #dddddd;
+padding: 10px;
+margin: 2px;
+transition: background-color 1s;}
+
+nav#menu ul :hover{
+    background-color: #606060;
+}
+
+nav#menu h1{display: none;}
+
+nav#menu a{
+    color: #000000;
+    text-decoration: none;
+}
+
+nav#menu a :hover {
+    color: #ffffff;
+    text-decoration: underline;
 }
